--- a/index.html
+++ b/index.html
@@ -29,31 +29,56 @@
 			href="https://fonts.googleapis.com/css2?family=Overpass:wght@400;700&display=swap"
 			rel="stylesheet"
 		/>
+		<link
+			rel="stylesheet"
+			href="./styles/styles.css"
+		/>
 	</head>
 	<body>
-		<!-- Rating state start -->
+		<main>
+			<section>
+				<article>
+					<button></button>
+					<h1>How did we do?</h1>
+					<p>
+						Please let us know how we did with your support request. All
+						feedback is appreciated to help us improve our offering!
+					</p>
+					<div>
+						<button>1</button>
+						<button>2</button>
+						<button>3</button>
+						<button>4</button>
+						<button>5</button>
+					</div>
+					<button>Submit</button>
+				</article>
+				<article>
+					<figure>
+						<img
+							src=""
+							alt=""
+						/>
+					</figure>
+					<span>You selected 4 out of 5</span>
+					<h4>Thank you!</h4>
+					<p>
+						We appreciate you taking the time to give a rating. If you ever need
+						more support, don’t hesitate to get in touch!
+					</p>
+				</article>
+			</section>
+		</main>
 
-		How did we do? Please let us know how we did with your support request. All
-		feedback is appreciated to help us improve our offering! 1 2 3 4 5 Submit
-
-		<!-- Rating state end -->
-
-		<!-- Thank you state start -->
-
-		You selected
-		<!-- Add rating here -->
-		out of 5 Thank you! We appreciate you taking the time to give a rating. If
-		you ever need more support, don’t hesitate to get in touch!
-
-		<!-- Thank you state end -->
-
-		<div class="attribution">
-			Challenge by
-			<a
-				href="https://www.frontendmentor.io?ref=challenge"
-				target="_blank"
-				>Frontend Mentor</a
-			>. Coded by <a href="#">Your Name Here</a>.
-		</div>
+		<footer>
+			<div class="attribution">
+				Challenge by
+				<a
+					href="https://www.frontendmentor.io?ref=challenge"
+					target="_blank"
+					>Frontend Mentor</a
+				>. Coded by <a href="#">Gustavo Leyte-Vidal</a>.
+			</div>
+		</footer>
 	</body>
 </html>
