feat: add second mobile card

--- a/index.html
+++ b/index.html
@@ -30,21 +30,24 @@
 			rel="stylesheet"
 			href="./styles/styles.css"
 		/>
-		<script defer src="./src/index.js"></script>
+		<script
+			defer
+			src="./src/index.js"
+		></script>
 	</head>
 	<body>
 		<main class="main-container">
 			<section class="section-rating">
 				<article class="section-rating__card-rating">
-					<figure class="section-rating__card-container__star-container">
+					<figure class="section-rating__card-rating__star-container">
 						<img
-							class="section-rating__card-container__star-container__image"
+							class="section-rating__card-rating__star-container__image"
 							src="/images/icon-star.svg"
 							alt="star"
 						/>
 					</figure>
 					<h1
-						class="section-rating__card-rating__h1 section-rating__card-rating__h1--color-white section-rating__card-rating__h1--size-bigger"
+						class="section-rating__card-rating__h1"
 					>
 						How did we do?
 					</h1>
@@ -52,26 +55,26 @@
 						Please let us know how we did with your support request. All
 						feedback is appreciated to help us improve our offering!
 					</p>
-						<div class="section-rating__card-container__buttons-container">
-							<button class="section-rating__card-container__button">1</button>
-							<button class="section-rating__card-container__button">2</button>
-							<button class="section-rating__card-container__button">3</button>
-							<button class="section-rating__card-container__button">4</button>
-							<button class="section-rating__card-container__button">5</button>
-						</div>
-						<button class="section-rating__card-container__submit-button">
-							SUBMIT
-						</button>
+					<div class="section-rating__card-rating__buttons-container">
+						<button class="section-rating__card-rating__button">1</button>
+						<button class="section-rating__card-rating__button">2</button>
+						<button class="section-rating__card-rating__button">3</button>
+						<button class="section-rating__card-rating__button">4</button>
+						<button class="section-rating__card-rating__button">5</button>
+					</div>
+					<button class="section-rating__card-rating__submit-button">
+						SUBMIT
+					</button>
 				</article>
-				<article class="section-rating__card-clasification inactive">
-					<figure>
+				<article class="section-rating__card-classification inactive">
+					<figure class="section-rating__card-classification__ilustration-container">
 						<img
 							src="/images/illustration-thank-you.svg"
-							alt="illustration thank you"
+							alt="Illustration thank you"
 						/>
 					</figure>
-					<span>You selected 4 out of 5</span>
-					<h4>Thank you!</h4>
+					<p class="section-rating__card-classification__selection"></p>
+					<h1 class="section-rating__card-classification__h1">Thank you!</h1>
 					<p>
 						We appreciate you taking the time to give a rating. If you ever need
 						more support, don’t hesitate to get in touch!
