--- a/index.html
+++ b/index.html
@@ -30,6 +30,11 @@
 			rel="stylesheet"
 			href="./styles/styles.css"
 		/>
+		<link
+			rel="stylesheet"
+			href="./styles/desktop.css"
+			media="screen and (min-width: 900px)"
+		/>
 		<script
 			defer
 			src="./src/index.js"
@@ -46,11 +51,7 @@
 							alt="star"
 						/>
 					</figure>
-					<h1
-						class="section-rating__card-rating__h1"
-					>
-						How did we do?
-					</h1>
+					<h1 class="section-rating__card-rating__h1">How did we do?</h1>
 					<p>
 						Please let us know how we did with your support request. All
 						feedback is appreciated to help us improve our offering!
@@ -62,18 +63,23 @@
 						<button class="section-rating__card-rating__button">4</button>
 						<button class="section-rating__card-rating__button">5</button>
 					</div>
+
 					<button class="section-rating__card-rating__submit-button">
 						SUBMIT
 					</button>
 				</article>
 				<article class="section-rating__card-classification inactive">
-					<figure class="section-rating__card-classification__ilustration-container">
+					<figure
+						class="section-rating__card-classification__ilustration-container"
+					>
 						<img
 							src="/images/illustration-thank-you.svg"
 							alt="Illustration thank you"
 						/>
 					</figure>
-					<p class="section-rating__card-classification__selection"></p>
+					<div class="section-rating__card-classification__selection-container">
+						<p class="section-rating__card-classification__selection-container__text"></p>
+					</div>
 					<h1 class="section-rating__card-classification__h1">Thank you!</h1>
 					<p>
 						We appreciate you taking the time to give a rating. If you ever need
