chore: completing readme

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 				>. Coded by
 				<a
 					class="footer-container__attribution__a"
-					href="https://github.com/gustavoylc/interactive-rating-component"
+					href="https://www.frontendmentor.io/profile/gustavoylc"
 					>Gustavo Leyte-Vidal</a
 				>.
 			</div>
